# GenerativeKImitPython_Material

./: .gitignore  README.md  first_script.py  pyproject.toml  requirements.txt  test_env.py  test_project.py
_scripts/: 42_chain_game.py  anthropic_intro.py  groq_intro.py  hf_reranker.py  multimodal_groq.py  multimodal_openai.py  openai_intro.py  parallel_chains.py  parallel_chains_exercise.py  prompt_template.py  routing_chain.py  structured_exercise_fact_checking.py  structured_output.py  structured_travel_itinerary.py  tokenizer.py
_scripts/news_analysis/: README.md  pyproject.toml  report.md
_scripts/news_analysis/src/news_analysis/: crew.py  main.py
_scripts/table_rag/: table_rag.py
_scripts/vector_database/: 10_data_loading.py  20_data_load_multiple.py  30_pdf4llm.py  40_wikipedia_loader.py  50_glove_word_embeddings.py  60_embeddings.py
code/vector_db/: data_chunking_recursive_split.py  data_loading.py
my-first-mcp-server/: README.md  pyproject.toml
my-first-mcp-server/src/my_first_mcp_server/: server.py
our_scripts/: chat_groq.py  first_chain.py  groq_multimodal.py  huggingface_test.py  prompt_hub_test.py  structured_outputs.py
our_scripts/vector_db/: data_loading copy.py  data_loading.py  db_query.py
our_webapp/: ai_task_planning_template.md  app.py  helper_funs.py
project_table_rag/: data_ingestion.py  data_query.py
scripts/M01_Einführung/: 31_prompt_hub.py  50_parallel_chain.py  voice2txt.py
scripts/M07_VectorDB_RAG/20_chunking/: 30_semantic_chunking.py
scripts/M07_VectorDB_RAG/table_rag/: data_prep.py  table_rag.py
scripts/M09_Agents/: 30_ag2_human_in_the_loop.py  40_ag2_tools.py  ag2_conversation.py  ag2_conversation_Daniel.py
scripts/M09_Agents/hart_aber_fair/: README.md  pyproject.toml  report.md
scripts/M09_Agents/hart_aber_fair/src/hart_aber_fair/: crew.py  main.py
scripts/M09_Agents/hart_aber_fair/src/hart_aber_fair/config/: agents.yaml  tasks.yaml
